--- a/Web-data-viz/public/principal.html
+++ b/Web-data-viz/public/principal.html
@@ -20,7 +20,6 @@
             <h1 class="logo">Apoena</h1>
             <nav class="nav">
                 <a href="#sobre">Sobre mim</a>
-                <a href="./cadastro.html">Cadastro</a>
                 <a href="./login.html">Login</a>
                 <!--<a href="./quiz/quiz.html">Quiz</a>--> <!--feito-->
             </nav>
@@ -44,37 +43,52 @@
             <div class="div-principal">
                 <ul class="lista">
                     <li onclick="saibaMais(this)">
-                        <span>Melhoria</span>
-                        <p class="descricao">Melhoria 1</p>
+                        <span>Foco e Concentração Aprimorados</span>
+                        <p class="descricao">Estar em ambientes naturais (como parques ou florestas) pode restaurar a atenção e a capacidade de concentração, que são esgotadas pela vida urbana e multitarefas. Este é o conceito da Teoria da Restauração da Atenção (ART).</p>
                     </li>
                     <li onclick="saibaMais(this)">
-                        <span>Melhoria</span>
-                        <p class="descricao">Melhoria 2</p>
+                        <span>Redução do Estresse</span>
+                        <p class="descricao">A natureza diminui os níveis de cortisol (o hormônio do estresse) e reduz a pressão arterial e a frequência cardíaca, promovendo uma sensação de calma.</p>
                     </li>
                     <li onclick="saibaMais(this)">
-                        <span>Melhoria</span>
-                        <p class="descricao">Melhoria 3</p>
+                        <span>Sistema Imunológico Reforçado</span>
+                        <p class="descricao">A inalação de fitoncidas (óleos essenciais liberados pelas árvores) durante o "banho de floresta" (Shinrin-Yoku) pode aumentar a atividade e a contagem das células Natural Killer (NK), que combatem vírus e células cancerígenas.</p>
                     </li>
 
                     <li onclick="saibaMais(this)">
                         <span>Fortalecimento do Sistema Imunológico</span>
                         <p class="descricao">Melhoria 4</p>
                     </li>
+
+                    <li onclick="saibaMais(this)">
+                        <span>Maior Motivação para Exercícios</span>
+                        <p class="descricao">Ambientes naturais, como trilhas e parques, são percebidos como menos estressantes e mais agradáveis para a prática de atividade física, incentivando as pessoas a se exercitarem por mais tempo e com mais frequência.</p>
+                    </li>
                 </ul>
             </div>
             <div class="div-principal">
                 <ul class="lista">
                     <li onclick="saibaMais(this)">
-                        <span>Melhoria</span>
+                        <span>Qualidade do Sono Otimizada</span>
                         <p class="descricao">Melhoria 5</p>
                     </li>
                     <li onclick="saibaMais(this)">
-                        <span>Melhoria</span>
-                        <p class="descricao">Melhoria 6</p>
+                        <span>Melhora do Humor e Bem-Estar</span>
+                        <p class="descricao">Passar tempo ao ar livre, especialmente sob a luz do sol, aumenta a produção de serotonina (o neurotransmissor do bem-estar) e reduz os sintomas de ansiedade e depressão.</p>
                     </li>
                     <li onclick="saibaMais(this)">
-                        <span>Melhoria</span>
-                        <p class="descricao">Melhoria 7</p>
+                        <span>Aumento da Vitamina D</span>
+                        <p class="descricao">A exposição solar, mesmo que breve, é essencial para a síntese da Vitamina D na pele, crucial para a saúde dos ossos, função muscular e suporte imunológico.</p>
+                    </li>
+
+                    <li onclick="saibaMais(this)">
+                        <span>Alívio da Dor</span>
+                        <p class="descricao">Em pacientes hospitalizados, ter vista para a natureza ou passar tempo em jardins pode levar a uma menor necessidade de medicamentos para a dor, graças ao seu efeito relaxante e distrator.</p>
+                    </li>
+
+                    <li onclick="saibaMais(this)">
+                        <span>Funções Cognitivas Estimuladas</span>
+                        <p class="descricao">Estudos mostram que o contato com o verde pode melhorar a memória de curto prazo, a criatividade e a capacidade de resolução de problemas, especialmente em crianças.</p>
                     </li>
                 </ul>
             </div>
