--- a/Web-data-viz/public/cadastro.html
+++ b/Web-data-viz/public/cadastro.html
@@ -5,29 +5,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Momo+Trust+Display&display=swap');
-    </style>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Momo+Trust+Display&display=swap');
+  </style>
   <link rel="stylesheet" href="./css/loginCadastro.css">
 </head>
 
 <body>
 
   <header class="header">
-        <div class="container">
-            <h1 class="logo">Apoena</h1>
-            <nav class="nav">
-                <a href="./principal.html">Home</a>
-                <a href="./cadastro.html">Cadastro</a>
-                <a href="./login.html">Login</a>
-                <!--<a href="./quiz/quiz.html">Quiz</a>--> <!--feito-->
-            </nav>
-        </div>
-    </header>
+    <div class="container">
+      <h1 class="logo">Apoena</h1>
+      <nav class="nav">
+        <a href="./principal.html">Home</a>
+        <a href="./login.html">Login</a>
+      </nav>
+    </div>
+  </header>
 
 
   <div class="wrapper">
-    <form action="" id="formularioCadastro">
+    <div action="" id="formularioCadastro">
       <h1>Cadastro</h1>
       <div class="input-caixa">
         <input type="text" placeholder="Nome" id="iptNome">
@@ -50,19 +48,18 @@
           <span id="mensagem_erro"></span>
         </div>
       </div>
-      <button type="submit" class="button">Cadastrar</button>
+      <button onclick="cadastrar()" class="button">Cadastrar</button>
 
-    </form>
+      <a href="./login.html">
+        <button class="button">Já possuí Cadastro?</button>
+      </a>
+
+    </div>
   </div>
 </body>
 
 </html>
 <script>
-
-  document.getElementById("formularioCadastro").addEventListener("submit", function (event) {
-    event.preventDefault(); // Impede o recarregamento da página
-    cadastrar();
-  });
   function cadastrar() {
     var nome = iptNome.value;
     var email = iptEmail.value;
@@ -89,21 +86,6 @@
       alert("Informe valores válidos")
       return;
     }
-
-    /* Verificando se o código de ativação é de alguma empresa cadastrada
-    for (let i = 0; i < listaEmpresasCadastradas.length; i++) {
-      if (listaEmpresasCadastradas[i].codigo_ativacao == codigoVar) {
-        idEmpresaVincular = listaEmpresasCadastradas[i].id
-        console.log("Código de ativação válido.");
-        break;
-      } else {
-        cardErro.style.display = "block";
-        mensagem_erro.innerHTML = "(Mensagem de erro para código inválido)";
-        finalizarAguardar();
-      }
-    }
-      */
-
     // Enviando o valor da nova input
     fetch("/usuarios/cadastrar", {
       method: "POST",
