Fix: Correções no conteúdo 'Melhorias'

--- a/Web-data-viz/public/principal.html
+++ b/Web-data-viz/public/principal.html
@@ -57,7 +57,7 @@
 
                     <li onclick="saibaMais(this)">
                         <span>Fortalecimento do Sistema Imunológico</span>
-                        <p class="descricao">Melhoria 4</p>
+                        <p class="descricao">A exposição à natureza fortalece o sistema imunológico ao expor o corpo a uma variedade de microrganismos benéficos, estimulando a produção de células de defesa e a diversidade da microbiota intestinal. </p>
                     </li>
 
                     <li onclick="saibaMais(this)">
@@ -70,7 +70,7 @@
                 <ul class="lista">
                     <li onclick="saibaMais(this)">
                         <span>Qualidade do Sono Otimizada</span>
-                        <p class="descricao">Melhoria 5</p>
+                        <p class="descricao">Reduzir o estresse e a ansiedade, regular o ritmo circadiano através da luz solar e promover relaxamento mental. </p>
                     </li>
                     <li onclick="saibaMais(this)">
                         <span>Melhora do Humor e Bem-Estar</span>
