--- a/Web-data-viz/public/login.html
+++ b/Web-data-viz/public/login.html
@@ -99,7 +99,7 @@
                     sessionStorage.ID_USUARIO = json.id;
 
                     setTimeout(function () {
-                        window.location = "/quiz/aquizteste.html";
+                        window.location = "/quiz/quiz.html";
                     }, 1000); // apenas para exibir o loading
 
                 });
