Fix: Final commit

--- a/Web-data-viz/public/cadastro.html
+++ b/Web-data-viz/public/cadastro.html
@@ -37,11 +37,7 @@
         <input type="password" placeholder="Senha" id="iptSenha">
       </div>
       <div class="input-caixa">
-        <input type="password" placeholder="Senha" id="iptConfirmarSenha">
-      </div>
-      <div class="relembrar-senha">
-        <label> <input type="checkbox">Lembrar-me</label>
-        <a href="#">Esqueci a senha</a>
+        <input type="password" placeholder="Confirmar Senha" id="iptConfirmarSenha">
       </div>
       <div class="alerta_erro">
         <div class="card_erro" id="cardErro">
