--- a/Web-data-viz/public/principal.html
+++ b/Web-data-viz/public/principal.html
@@ -44,25 +44,34 @@
                 <ul class="lista">
                     <li onclick="saibaMais(this)">
                         <span>Foco e Concentração Aprimorados</span>
-                        <p class="descricao">Estar em ambientes naturais (como parques ou florestas) pode restaurar a atenção e a capacidade de concentração, que são esgotadas pela vida urbana e multitarefas. Este é o conceito da Teoria da Restauração da Atenção (ART).</p>
+                        <p class="descricao">Estar em ambientes naturais (como parques ou florestas) pode restaurar a
+                            atenção e a capacidade de concentração, que são esgotadas pela vida urbana e multitarefas.
+                            Este é o conceito da Teoria da Restauração da Atenção (ART).</p>
                     </li>
                     <li onclick="saibaMais(this)">
                         <span>Redução do Estresse</span>
-                        <p class="descricao">A natureza diminui os níveis de cortisol (o hormônio do estresse) e reduz a pressão arterial e a frequência cardíaca, promovendo uma sensação de calma.</p>
+                        <p class="descricao">A natureza diminui os níveis de cortisol (o hormônio do estresse) e reduz a
+                            pressão arterial e a frequência cardíaca, promovendo uma sensação de calma.</p>
                     </li>
                     <li onclick="saibaMais(this)">
                         <span>Sistema Imunológico Reforçado</span>
-                        <p class="descricao">A inalação de fitoncidas (óleos essenciais liberados pelas árvores) durante o "banho de floresta" (Shinrin-Yoku) pode aumentar a atividade e a contagem das células Natural Killer (NK), que combatem vírus e células cancerígenas.</p>
+                        <p class="descricao">A inalação de fitoncidas (óleos essenciais liberados pelas árvores) durante
+                            o "banho de floresta" (Shinrin-Yoku) pode aumentar a atividade e a contagem das células
+                            Natural Killer (NK), que combatem vírus e células cancerígenas.</p>
                     </li>
 
                     <li onclick="saibaMais(this)">
                         <span>Fortalecimento do Sistema Imunológico</span>
-                        <p class="descricao">A exposição à natureza fortalece o sistema imunológico ao expor o corpo a uma variedade de microrganismos benéficos, estimulando a produção de células de defesa e a diversidade da microbiota intestinal. </p>
+                        <p class="descricao">A exposição à natureza fortalece o sistema imunológico ao expor o corpo a
+                            uma variedade de microrganismos benéficos, estimulando a produção de células de defesa e a
+                            diversidade da microbiota intestinal. </p>
                     </li>
 
                     <li onclick="saibaMais(this)">
                         <span>Maior Motivação para Exercícios</span>
-                        <p class="descricao">Ambientes naturais, como trilhas e parques, são percebidos como menos estressantes e mais agradáveis para a prática de atividade física, incentivando as pessoas a se exercitarem por mais tempo e com mais frequência.</p>
+                        <p class="descricao">Ambientes naturais, como trilhas e parques, são percebidos como menos
+                            estressantes e mais agradáveis para a prática de atividade física, incentivando as pessoas a
+                            se exercitarem por mais tempo e com mais frequência.</p>
                     </li>
                 </ul>
             </div>
@@ -70,25 +79,33 @@
                 <ul class="lista">
                     <li onclick="saibaMais(this)">
                         <span>Qualidade do Sono Otimizada</span>
-                        <p class="descricao">Reduzir o estresse e a ansiedade, regular o ritmo circadiano através da luz solar e promover relaxamento mental. </p>
+                        <p class="descricao">Reduzir o estresse e a ansiedade, regular o ritmo circadiano através da luz
+                            solar e promover relaxamento mental. </p>
                     </li>
                     <li onclick="saibaMais(this)">
                         <span>Melhora do Humor e Bem-Estar</span>
-                        <p class="descricao">Passar tempo ao ar livre, especialmente sob a luz do sol, aumenta a produção de serotonina (o neurotransmissor do bem-estar) e reduz os sintomas de ansiedade e depressão.</p>
+                        <p class="descricao">Passar tempo ao ar livre, especialmente sob a luz do sol, aumenta a
+                            produção de serotonina (o neurotransmissor do bem-estar) e reduz os sintomas de ansiedade e
+                            depressão.</p>
                     </li>
                     <li onclick="saibaMais(this)">
                         <span>Aumento da Vitamina D</span>
-                        <p class="descricao">A exposição solar, mesmo que breve, é essencial para a síntese da Vitamina D na pele, crucial para a saúde dos ossos, função muscular e suporte imunológico.</p>
+                        <p class="descricao">A exposição solar, mesmo que breve, é essencial para a síntese da Vitamina
+                            D na pele, crucial para a saúde dos ossos, função muscular e suporte imunológico.</p>
                     </li>
 
                     <li onclick="saibaMais(this)">
                         <span>Alívio da Dor</span>
-                        <p class="descricao">Em pacientes hospitalizados, ter vista para a natureza ou passar tempo em jardins pode levar a uma menor necessidade de medicamentos para a dor, graças ao seu efeito relaxante e distrator.</p>
+                        <p class="descricao">Em pacientes hospitalizados, ter vista para a natureza ou passar tempo em
+                            jardins pode levar a uma menor necessidade de medicamentos para a dor, graças ao seu efeito
+                            relaxante e distrator.</p>
                     </li>
 
                     <li onclick="saibaMais(this)">
                         <span>Funções Cognitivas Estimuladas</span>
-                        <p class="descricao">Estudos mostram que o contato com o verde pode melhorar a memória de curto prazo, a criatividade e a capacidade de resolução de problemas, especialmente em crianças.</p>
+                        <p class="descricao">Estudos mostram que o contato com o verde pode melhorar a memória de curto
+                            prazo, a criatividade e a capacidade de resolução de problemas, especialmente em crianças.
+                        </p>
                     </li>
                 </ul>
             </div>
@@ -106,8 +123,8 @@
             <div class="sobre-text-content">
                 <h3>Mais sobre mim e meu Projeto</h3>
                 <p>
-                    Sou apaixonado por viagens e acredito que cada aventura deve ser divertida e inesperada como
-                    abrir um mapa do tesouro!
+                    Prazer! Me chamo Eric, tenho 18 anos, e meu amor pela natureza só vem crescendo, é como se fosse algo intrínseco, que vem crescendo e crescendo. Desde que me conheço
+                    por gente eu tenho essa admiração pela natureza. 
                 </p>
             </div>
         </div>
@@ -116,30 +133,14 @@
             <div class="sobre-image-wrapper">
             </div>
             <div class="sobre-text-content">
-                <h3>comentáio: contarei mais sobre mim</h3>
+                <h3>Vínculo Natureza e Viagem</h3>
                 <p>
-                    AQUI COMENTAREI
+                    Sou apaixonado por viagens e acredito que cada viagem tem sua peculiaridade, o que a faz se tornar tão rica!
+                    
                 </p>
             </div>
         </div>
-        <div class="container secao-flex">
-            <div class="sobre-image-wrapper">
-            </div>
-            <div class="sobre-text-content">
-                <h3>comentário: Fechar sessão</h3>
-                <p>
-                    ULTIMAS INFOS
-                </p>
-                <a href="#" class="botao botao-principal">Saiba mais</a>
-            </div>
-        </div>
 
-
-    </section>
-    <!--IMPLEMENTAR ALGUNS VALORES ONU-->
-    </section>
-
-    
     <!--FOOTER AQUI /-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-->
     <footer class="footer">
         <div class="container footer-grid">
